# openpacs-slave-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.old
components/osdp/: CMakeLists.txt  Kconfig.projbuild
components/osdp/include/: esp_osdp.h
components/osdp/port/: osdp_channel_uart.c  osdp_port.h
components/osdp/src/: libosdp_wrapper.c
components/wiegand/: CMakeLists.txt  Kconfig.projbuild
components/wiegand/include/: wiegand.h  wiegand_io.h
components/wiegand/src/: wiegand.c  wiegand_io.c
main/: CMakeLists.txt  hello_world_main.c
